# atsf4g-co

./: .clang-format  .clang-tidy  .clang-tidy.light  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Plan.md  README.md  cleanup-prebuilts.ps1  cleanup-prebuilts.sh  cmake-toolset-upgrade-cleanup.ps1  cmake-toolset-upgrade-cleanup.sh  cmake_dev.ps1  cmake_dev.sh  cppcheck.sh
atframework/export/: CMakeLists.txt
atframework/export/atgateway_client_sdk_v2_c/: CMakeLists.txt  libatgateway_v2_c.cpp  libatgateway_v2_c.h
atframework/export/atgw_inner_v1_c/: CMakeLists.export.txt  CMakeLists.txt  libatgw_inner_v1_c.cpp  libatgw_inner_v1_c.h
atframework/export/atgw_v1_c/: CMakeLists.txt  libatgw_v1_c.cpp  libatgw_v1_c.h
atframework/service/: CMakeLists.txt
atframework/service/atgateway/: CMakeLists.txt  atgateway.cpp  session.cpp  session.h  session_manager.cpp  session_manager.h
atframework/service/atproxy/: CMakeLists.txt  atproxy.cpp  atproxy_manager.cpp  atproxy_manager.h
atframework/service/component/: CMakeLists.txt
sample/: CMakeLists.txt
sample/atgateway_client_hello/: CMakeLists.txt  hello.cpp
sample/atgw_cli_hello/: CMakeLists.txt  hello.cpp
sample/atgw_cli_inner_hello/: CMakeLists.txt  hello.cpp
src/: CMakeLists.txt  generate-for-pb.conf.yaml  generate-for-pb.py  generate-inserver-rpc-task.cmake  generate-nomsg-task.sh  generate-nomsg-task.sh.in  generate-rpc-task.cmake  generate_for_pb_utility.cmake  service-functions.cmake
src/authsvr/: CMakeLists.txt  generate-rpc-task.cmake
src/authsvr/service/: CMakeLists.txt
src/component/: CMakeLists.txt  GameSharedConponent.settings.cmake  component-functions.cmake
src/component/GameSharedComponent/: .clang-format  CMakeLists.txt
src/component/distributed_transaction/: CMakeLists.txt  README.md  generate-rpc-task.cmake
src/component/rank/: CMakeLists.txt  generate-rpc-task.cmake
src/component/ranksvr/: CMakeLists.txt  generate-rpc-task.cmake
src/component/test/: CMakeLists.txt
src/echosvr/: CMakeLists.txt
src/echosvr/app/: echosvr_main.cpp
src/gamesvr/: CMakeLists.txt  generate-rpc-task.cmake
src/gamesvr/app/: gamesvr_main.cpp  handle_cs_msg.cpp  handle_cs_msg.h  handle_ss_rpc_gamesvrservice.cpp  handle_ss_rpc_gamesvrservice.h
src/gamesvr/data/: player.cpp  player.h
src/gamesvr/sdk/: CMakeLists.txt
src/gamesvr/service/: CMakeLists.txt
src/lobbysvr/: CMakeLists.txt  generate-rpc-task.cmake
src/lobbysvr/sdk/: CMakeLists.txt
src/lobbysvr/service/: CMakeLists.txt
src/loginsvr/: CMakeLists.txt  generate-rpc-task.cmake
src/loginsvr/app/: handle_cs_msg.cpp  handle_cs_msg.h  handle_ss_msg.h  loginsvr_main.cpp
src/loginsvr/logic/: task_action_login_authorization.cpp  task_action_login_authorization.h
src/loginsvr/service/: CMakeLists.txt
src/rank_settlement_svr/: CMakeLists.txt  generate-rpc-task.cmake
src/rank_settlement_svr/service/: CMakeLists.txt
src/ranksvr/: CMakeLists.txt  generate-rpc-task.cmake
src/ranksvr/sdk/: CMakeLists.txt
src/server_frame/: CMakeLists.txt  generate_config_codes.cmake  generate_proto_source.cmake  generate_proto_utility.cmake  server_frame.cmake
src/server_frame/config/: excel_config_const_index.cpp  excel_config_const_index.h  excel_config_wrapper.cpp  excel_config_wrapper.h  extern_service_types.h  logic_config.cpp  logic_config.h  server_frame_build_feature.cpp.in  server_frame_build_feature.h  server_frame_build_feature.h.in
src/server_frame/data/: player_cache.cpp  player_cache.h  player_key_hash_helper.h  session.cpp  session.h
src/server_frame/dispatcher/: actor_action_base.cpp  actor_action_base.h  actor_action_cs_req_base.cpp  actor_action_cs_req_base.h  actor_action_no_req_base.cpp  actor_action_no_req_base.h  actor_action_ss_req_base.cpp  actor_action_ss_req_base.h  cs_msg_dispatcher.cpp  cs_msg_dispatcher.h  db_msg_dispatcher.cpp  db_msg_dispatcher.h  dispatcher_implement.cpp  dispatcher_implement.h  dispatcher_type_defines.cpp  dispatcher_type_defines.h  ss_msg_dispatcher.cpp  ss_msg_dispatcher.h  task_action_base.cpp  task_action_base.h  task_action_cs_req_base.cpp  task_action_cs_req_base.h  task_action_no_req_base.cpp  task_action_no_req_base.h  task_action_ss_req_base.cpp  task_action_ss_req_base.h  task_manager.cpp  task_manager.h  task_type_defines.h  task_type_traits.cpp  task_type_traits.h
src/server_frame/logic/: logic_server_macro.h  logic_server_setup.cpp  logic_server_setup.h  player_manager.cpp  player_manager.h  session_manager.cpp  session_manager.h
src/server_frame/protocol/: generate_proto_source.cmake
src/server_frame/router/: handle_ss_rpc_routerservice.cpp  handle_ss_rpc_routerservice.h  router_manager.h  router_manager_base.cpp  router_manager_base.h  router_manager_set.cpp  router_manager_set.h  router_object.h  router_object_base.cpp  router_object_base.h  router_player_cache.cpp  router_player_cache.h  router_player_manager.cpp  router_player_manager.h  router_system_defs.h
src/server_frame/rpc/: rpc_async_invoke.cpp  rpc_async_invoke.h  rpc_context.cpp  (+9 more)
src/templates/: config_easy_api.cpp.mako  config_easy_api.h.mako  config_manager.cpp.mako  config_manager.h.mako  config_set.cpp.mako  config_set.h.mako  custom_config_manager_include_fields.h.mako  custom_easy_api_include_fields.h.mako  custom_group_fields.h.mako  custom_include_fields.h.mako  db_interface.cpp.mako  db_interface.h.mako  db_rpc_redis.cpp.mako  db_rpc_redis.h.mako  db_rpc_redis_kl.cpp.mako  db_rpc_redis_kl.h.mako  db_rpc_redis_kv.cpp.mako  db_rpc_redis_kv.h.mako  handle_cs_rpc.cpp.mako  handle_ss_rpc.cpp.mako  handle_ss_rpc.h.mako  item_type_config.cpp.mako  item_type_config.h.mako  package_request_api_for_simulator.cpp.mako  package_request_api_for_simulator.h.mako  rpc_call_api_for_ss.cpp.mako  rpc_call_api_for_ss.h.mako  session_downstream_api_for_cs.cpp.mako  session_downstream_api_for_cs.h.mako  task_action_cs_rpc.cpp.mako  task_action_cs_rpc.h.mako  task_action_no_msg.cpp.mako  task_action_no_msg.h.mako  task_action_ss_rpc.cpp.mako  task_action_ss_rpc.h.mako
src/tools/: CMakeLists.txt
(+747 files in other folders)
