unset(ATFRAMEWORK_EXPORT_PRIVATE_OPTIONS)
if (COMPILER_STRICT_CFLAGS)
    list(APPEND ATFRAMEWORK_EXPORT_PRIVATE_OPTIONS ${COMPILER_STRICT_CFLAGS})
endif ()
if (COMPILER_STRICT_EXTRA_CFLAGS)
    list(APPEND ATFRAMEWORK_EXPORT_PRIVATE_OPTIONS ${COMPILER_STRICT_EXTRA_CFLAGS})
endif ()

# base services
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/atgw_inner_v1_c")