unset(ATFRAMEWORK_SREVICE_PRIVATE_OPTIONS)
if (COMPILER_STRICT_CFLAGS)
    list(APPEND ATFRAMEWORK_SREVICE_PRIVATE_OPTIONS ${COMPILER_STRICT_CFLAGS})
endif ()
if (COMPILER_STRICT_EXTRA_CFLAGS)
    list(APPEND ATFRAMEWORK_SREVICE_PRIVATE_OPTIONS ${COMPILER_STRICT_EXTRA_CFLAGS})
endif ()

# base services
add_subdirectory(${ATFRAMEWORK_SERVICE_COMPONENT_DIR})
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/atproxy")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/atgateway")

